--- a/estilos/style.css
+++ b/estilos/style.css
@@ -96,6 +96,8 @@ main {
     color: var(--cor02);
     margin: auto;
     border-radius: 10px;
+    padding-bottom: 5px;
+    
 }
 
 section h2, p {
@@ -106,6 +108,7 @@ section h2{
     font-family: var(--fontTitle);
     font-size: 2em;
     font-weight: bold;
+    text-align: center;
 }
 
 section p{ 
@@ -114,7 +117,15 @@ section p{
     font-size: 1.2em;
     font-weight: normal;
     line-height: 35px;
+    text-align: justify;
 }
+
+picture{
+    display: block;
+    text-align: center;
+}
+
+picture > img { width: 100%; }
 
 .verMais , #menuIcon{
     text-align: center;
@@ -164,6 +175,6 @@ footer{
     font-family: var(--font01);
     font-size: 1.2em;
 
-    padding: 10px;
-    min-height: 150px;
+    
+    height: 150px;
 }
