--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -2,4 +2,12 @@
 
 @media screen and (min-width:768px) {
     picture > img { width: 75%; }
+
+    section p { 
+        width: 75%;
+        margin: auto;
+    }
+
+  
+    
 }
