--- a/estilos/style.css
+++ b/estilos/style.css
@@ -161,6 +161,15 @@ picture > img { width: 100%; }
   'opsz' 48
 }
 
+hr{
+    width: 90vw;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(176, 173, 173, 0.75), rgba(105, 105, 105, 0));
+}
 
 /* ---------------------------------------------------------- */
 
