--- a/estilos/style.css
+++ b/estilos/style.css
@@ -174,6 +174,8 @@ picture > img { width: 100%; }
     color: rgb(145, 183, 255);
     background-color: #080F0F;
     transition: .5s;
+    outline: black;
+    border-color: black;
 }
 
 #btnUp:hover{
