--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -17,6 +17,25 @@
     --fontTitle: 'Bungee Hairline';
 }
 
+/* Telemovel */
+@media screen and (max-width:768px) {
+
+    #menuIcon{
+        display: block;
+        text-align: center;
+        padding: 10px;
+        cursor: pointer;
+    }
+
+
+
+    picture > img { width: 100%; }
+
+
+}
+
+
+/* Tablet e Desktop */
 @media screen and (min-width:768px) {
     picture > img { width: 75%; }
 
@@ -34,23 +53,23 @@
 
     }
     /* Animação underline no menu */
-    #menu li a::before{
-        content: "";
-        position: absolute;
-        display: block;
-        width: 100%;
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        background-color: var(--cor02);
-        transform: scaleX(0);
-        transition: transform 0.3s ease;
-    }
+        #menu li a::before{
+            content: "";
+            position: absolute;
+            display: block;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: var(--cor02);
+            transform: scaleX(0);
+            transition: transform 0.3s ease;
+        }
 
-    #menu li a:hover::before {
-        visibility: visible;
-        transform: scaleX(1);
-    }
+        #menu li a:hover::before {
+            visibility: visible;
+            transform: scaleX(1);
+        }
     
     #menu li{
         display: inline-block;
@@ -58,4 +77,8 @@
     
     #menuIcon{display: none;}
     
+    picture{
+        display: block;
+        text-align: center;
+    }
 }
