--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -20,6 +20,8 @@
 /* Telemovel */
 @media screen and (max-width:768px) {
 
+    #menu{display: none;}
+
     #menuIcon{
         display: block;
         text-align: center;
