update media query

--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -20,17 +20,50 @@
 /* Telemovel */
 @media screen and (max-width:768px) {
 
-    #menu{display: none;}
+
+    #menu{
+        display: block;
+        width: 100%;
+        height: 0px;
+        text-align: center;
+        transition: .6s;
+        visibility: hidden;
+        overflow-y: hidden;
+    }
+
+    #menu a{
+        /* border-bottom: 1px solid rgba(255, 255, 255, 0.16); */
+    }
+
+    /* Classe para quando está ativo */
+    #menu.active  {
+        height: 300px;
+        visibility: visible;
+    }
+
+    #btn-mobile{
+        text-align: center;
+        border: none;
+        padding: .5rem 1rem;
+        background: none;
+        cursor: pointer;
+        color: white;
+    }
+    
 
     #menuIcon{
-        display: block;
         text-align: center;
         padding: 10px;
         cursor: pointer;
+        
+        
     }
 
-
-
+    #botao{
+        display: flex;
+        justify-content: center;
+    }
+    
     picture > img { width: 100%; }
 
 
@@ -54,6 +87,9 @@
         text-align: center;
 
     }
+
+    #btn-mobile{display: none;}
+
     /* Animação underline no menu */
         #menu li a::before{
             content: "";
