--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -33,7 +33,7 @@
 
     #menu a{
         /* border-bottom: 1px solid rgba(255, 255, 255, 0.16); */
-        padding: 10px;
+        margin-top: 10px;
     }
 
     /* Classe para quando está ativo */
