blue tap remove

--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -29,6 +29,8 @@
         transition: .6s;
         visibility: hidden;
         overflow-y: hidden;
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        -webkit-tap-highlight-color: transparent;
     }
 
     #menu a{
@@ -43,6 +45,8 @@
     }
 
     #btn-mobile{
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        -webkit-tap-highlight-color: transparent;
         text-align: center;
         border: none;
         padding: .5rem 1rem;
