--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -39,7 +39,7 @@
         transition: 1s;
     }
     
-    #menu a:active
+    #menu a:hover
     {
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(33, 55, 103, 0.75), rgba(105, 105, 105, 0));
         transition: 1s;
