--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -37,12 +37,15 @@
         /* border-bottom: 1px solid rgba(255, 255, 255, 0.16); */
         margin-top: 10px;
         transition: 1s;
+        background-size: 300%;
+        background-position: 100%;
     }
     
     #menu a:hover
     {
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(33, 55, 103, 0.75), rgba(105, 105, 105, 0));
         transition: 1s;
+        background-position: center;
     }
 
     /* Classe para quando está ativo */
