--- a/estilos/sobreStyle.css
+++ b/estilos/sobreStyle.css
@@ -3,7 +3,8 @@
 @media screen and (max-width:768px){
     
     #vid video {
-        width: 85%;
+        width: 100%;
+        padding-top: 10px;
     }
 }
 
